# RAG-Ready-Web-Corpus-Builder-using-OpenClaw

./: .gitignore  README.md  db.sqlite3  pipeline_config.yaml  pyproject.toml
src/rag_corpus_builder/: __init__.py  chunker.py  cli.py  config.py  crawler.py  embedder.py  exporter.py  extractor.py  models.py  pipeline.py  preprocessor.py
tests/: test_chunker.py  test_config.py  test_exporter.py  test_extractor.py  test_preprocessor.py
web/: manage.py  settings.py  urls.py  wsgi.py
web/dashboard/: admin.py  api_urls.py  api_views.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
web/dashboard/migrations/: 0001_initial.py
web/static/css/: custom.css
web/templates/: base.html
web/templates/dashboard/: index.html  job_chunks.html  job_detail.html  job_logs.html  new_job.html
